Fix sizing and spacing. Add testimonials.

--- a/wp-content/themes/annette-lankester-2018/scss/06-Components/_button.scss
+++ b/wp-content/themes/annette-lankester-2018/scss/06-Components/_button.scss
@@ -1,6 +1,6 @@
 .#{$namespace}-btn {
   display: inline-block;
-  padding: px-to-rem(7px) px-to-rem(20px);
+  padding: px-to-rem(10px) px-to-rem(20px);
   max-height: 40px;
   border-radius: 4px;
   transition: box-shadow .3s ease-in-out;
